# Steering_MPC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MPC.cpp  MPC.h  MPC.hpp  README.md  cornering_stiffness_vs_vertical_load.txt  geometry.hpp  main_mpc.cpp
